force-app/main/default/objects/Follow_Up_Detail_Config__c/Follow_Up_Detail_Config__c.object-meta.xml
<CustomObject>
    <description>Allows the configuration of fields for complex followup questions</description>
    <label>Follow Up Detail Config</label>
    <nameField>
        <displayFormat>FUDC-{0000}</displayFormat>
        <label>Follow Up Detail Config ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow Up Detail Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>