force-app/main/default/objects/Follow_Up_Detail_Config__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>allows the field to be deactivated and no longer requested in the followup</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>