force-app/main/default/objects/Follow_Up_Detail_Config__c/fields/Currency_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Currency_Placeholder__c</fullName>
    <label>Currency Placeholder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>