force-app/main/default/objects/Follow_Up_Detail_Config__c/fields/Date_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Date_Placeholder__c</fullName>
    <label>Date Placeholder</label>
    <type>Date</type>
</CustomField>