force-app/main/default/objects/Follow_Up_Detail_Config__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>Enter the field name that will be displayed</inlineHelpText>
    <label>Field Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>