force-app/main/default/objects/Follow_Up_Detail_Config__c/fields/Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Bank</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>Follow Up Detail Configs</relationshipLabel>
    <relationshipName>Follow_Up_Detail_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>