force-app/main/default/objects/Follow_Up_Detail_Config__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to make the field defined by this as required</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>