force-app/main/default/objects/Follow_Up_Detail_Config__c/validationRules/require_picklist_values.validationRule-meta.xml
<ValidationRule>
    <fullName>require_picklist_values</fullName>
    <active>true</active>
    <description>requires picklist values to be set when picklist type is selected.</description>
    <errorConditionFormula>ISPICKVAL (  Answer_Type__c , 'Picklist') &amp;&amp; ISBLANK (  Picklist_Values__c )</errorConditionFormula>
    <errorMessage>Please enter picklist values in the "Picklist Values" field when selecting the Picklist answer type</errorMessage>
</ValidationRule>